# tex2ast

./: README.md  example.tex  pyproject.toml
src/tex2ast/: __init__.py  ast_nodes.py  bib_parser.py  build.py  cli.py  dependency.py  expand.py  lexer.py  parser.py  remove_changes.py  serializer.py
