[project]
name = "tex2ast"
version = "0.1.0"
description = "LaTeX to AST converter with XeLaTeX support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ast = "tex2ast.cli:main"
